Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131394

Type assertions don't work properly for inline components

    XMLWordPrintable

Details

    • 77a20c00e (dev), c4e64d082 (6.8)

    Description

      Type assertions ("as-casts") fail for inline components if there are no function that takesĀ  that type as an argument. Adding such a function makes the assertion succeed; the function does not need to be called. This also seems to apply to types defined in local QML files.

      To reproduce, run the attached bug.qml file with the qml tool.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-131394
          # Subject Branch Project Status CR V

          Activity

            People

              ulherman Ulf Hermann
              tvete Paul Olav Tvete
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes