QtQml: Require VME MetaObjects for types with inline components

We need to be able to look them up in the type registry in order to
locate the inline components.

Pick-to: 6.8
Fixes: QTBUG-131394
Change-Id: I86a615ffab1ffcc1262ca0f282ad4893366d4654
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>